<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.bruce.p0_showcase.MainActivity"
    android:orientation="vertical"
    android:background="#CFD8DC"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:clickable="false" />

    </android.support.design.widget.AppBarLayout>

<!--    <include layout="@layout/title" /> -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#455A64"
    />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app1"
            android:id="@+id/button1"
            android:background="#FFA726"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app2"
            android:id="@+id/button2"
            android:background="#FFA726"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app3"
            android:id="@+id/button3"
            android:background="#FFA726"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app4"
            android:id="@+id/button4"
            android:background="#FFA726"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app5"
            android:id="@+id/button5"
            android:background="#FFA726"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/app6"
            android:id="@+id/button6"
            android:background="#FFA726"/>
    </TableRow>


</LinearLayout>
